# GbgGridlock

./: .railway-setup-summary.md  AGENTS.md  COMPLETE_SOLUTION.md  DATABASE_PERSISTENCE_FIX.md  FEATURE_PRIORITIZATION_MATRIX.md  FRONTEND_FEATURES_ANALYSIS.md  FRONTEND_FEATURES_README.md  FRONTEND_FEATURES_SUMMARY.md  PRODUCTION_FIX_SUMMARY.md  PR_DESCRIPTION.md  RAILWAY.md  RAILWAY_DEPLOYMENT.md  README.md  REFACTORING_SUMMARY.md  STOP_GID_FIX_SUMMARY.md  STOP_ID_VERIFICATION_FINDINGS.md  SUMMARY.md  TRANSPORT_MODE_FINDINGS.md  analyze_recorded_stops.py  api_response_sample.json  docker-compose.yml  investigate_transport_mode.py  railway.toml  search_stop_ids.py  test_ferry_stops.py  verify_stop_gids_web.py  verify_stop_ids.py  verify_transport_mode_flow.py
.cursor/skills/: README.md
.github/workflows/: frontend-pages.yml  frontend-tests.yml  python-tests.yml
backend/: .env.example  README.md  alembic.ini  migrate.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260312_01_create_timescale_schema.py  20260314_01_add_transport_mode.py  20260318_01_backfill_transport_mode.py  20260319_01_set_timezone_utc.py  20260323_01_create_monitored_stops_table.py
backend/src/gbg_gridlock_api/: config.py  database.py  debug_metrics.py  main.py  monitored_stops.py  repository.py  schemas.py  stop_resolver.py  vasttrafik_client.py  worker.py  worker_models.py  worker_repository.py
backend/src/gbg_gridlock_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_build_and_deploy.py  test_config.py  test_vasttrafik_client.py  test_worker.py  test_worker_repository.py
db/: README.md  init.sql  sqitch.conf  sqitch.plan
db/deploy/: 001_base_schema.sql  002_line_metadata.sql
db/revert/: 001_base_schema.sql  002_line_metadata.sql
db/verify/: 001_base_schema.sql  002_line_metadata.sql
design-system/gbggridlock/: MASTER.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
worker/: .env.example  pyproject.toml
worker/src/gbg_gridlock_worker/: config.py  main.py  models.py  monitored_stops.py  repository.py
worker/src/gbg_gridlock_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
worker/tests/: test_vasttrafik_client.py  test_worker_flow.py
(+20 files in other folders)
