[project]
name = "gbg-gridlock-api"
version = "0.1.0"
description = "FastAPI backend for GbgGridlock aggregated delay metrics"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
